# Resaro_Take_Home_Assignment

./: .gitignore  README.md  pyproject.toml  run_test_queries.py
agents/: __init__.py  agent_registry.py  base_agent.py  briefing_generator.py  company_finder.py  document_finder.py  document_translator.py  research_assistant.py  web_searcher.py
database/: enriched_companies_100.jsonl  simulated_companies_100.jsonl
demo/: app.py
tests/: functional_tests.py
tests/fixtures/: synthetic_data.py
tools/: __init__.py  security_redacter.py  tool_registry.py
utils/: logger.py
