[project]
name = "resaro"
version = "0.1.0"
description = ""
authors = [
    {name = "Calvinnncy97",email = "calvinnncy97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub (>=1.3.5,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
